Remove extra margin on activity permalink page. Fixes #2979
git-svn-id: https://buddypress.svn.wordpress.org/trunk@3684 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -1348,6 +1348,10 @@ ul.activity-list li.has-comments {
 	padding-bottom: 20px;
 }
 
+body.activity-permalink ul.activity-list li.has-comments {
+	padding-bottom: 0;
+}
+
 .activity-list li.mini {
 	position: relative;
 	font-size: 11px;
